--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,30 @@
+*.rbc
+surfdome.iml
+*.sassc
+.sass-cache
+capybara-*.html
+.rspec
+/.bundle
+/vendor/bundle
+/log/*
+/tmp/*
+/db/*.sqlite3
+/public/system/*
+/coverage/
+/spec/tmp/*
+**.orig
+rerun.txt
+pickle-email-*.html
+config/database.yml
+public/assets
+.idea
+pickle-email-*.html
+/stores
+/vendor/gems-dev
+/public/spree/products/*
+.ruby-version
+coverage
+.powenv
+.rvmrc
+.DS_Store
 .env
-tmp/
-log/
